8206886: Java does not set the default format locale correctly on mac10.13

Reviewed-by: rriggs